# py-dir-snapshot

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_dir_snapshot/: __init__.py
tests/: test_dir_snapshot.py
