[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-dir-snapshot"
version = "0.1.8"
description = "Filesystem state snapshots with diff comparison"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["filesystem", "snapshot", "diff", "directory", "build", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-dir-snapshot#readme"
Repository = "https://github.com/philiprehberger/py-dir-snapshot"
Issues = "https://github.com/philiprehberger/py-dir-snapshot/issues"
Changelog = "https://github.com/philiprehberger/py-dir-snapshot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_dir_snapshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
